--- a/styles/styles.css
+++ b/styles/styles.css
@@ -180,6 +180,8 @@ aside#copy-region{
     font-size: 1rem;
     background-color: transparent;
     display: flex;
+    flex-wrap: wrap;
+    word-wrap: break-word;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -201,6 +203,8 @@ h2#copy-title:not(.change){
 p#copy-paragraph{
     margin-top: 0.5rem;
     color: var(--color-7);
+    max-width: 100%;
+    text-align: justify;
 }
 
 .btn.hidden{
